<resources>
    <string name="app_name">PersonaMaterial</string>
    <string name="action_settings">Settings</string>
    <string name="registro">REGISTRO</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="mensaje_error_cedula">Digite la cédula</string>
    <string name="mensaje_error_nombre">Digite el nombre</string>
    <string name="mensaje_error_apellido">Digite el apellido</string>
    <string name="mensaje_exitoso_guardar">Persona Guardada Exitosamente!!</string>
</resources>
